# brightScriptDocsScraper

./: .gitignore  LICENSE  README.md  context7.json  pyproject.toml
.github/workflows/: scrape-docs.yml
docs/: results.json
docs/docs/developer-program/: third-party-devs.md
docs/docs/developer-program/advertising/: ad-requirements.md  csas.md  demand-api.md  integrating-roku-advertising-framework.md  nielsen-dcr.md  raf-api.md  roku-advertising-framework.md  ssai-adapters.md
docs/docs/developer-program/authentication/: authentication-and-linking.md  authentication-overview.md  on-device-authentication.md  universal-authentication-protocol-for-single-sign-on.md
docs/docs/developer-program/certification/: certification.md  overview.md
docs/docs/developer-program/core-concepts/: controlling-screen-layout.md  controlling-screen-program-flow.md  core-concepts.md  data-scoping.md  developing-scenegraph-applications.md  downloading-server-content.md  event-loops.md  handling-application-events.md  localization.md  playing-videos.md  specifying-display-resolution.md  threads.md  transitioning-to-scenegraph.md
docs/docs/developer-program/debugging/: capturing-and-decrypting-ssl-packets.md  debugging-channels.md  socket-based-debugger.md
docs/docs/developer-program/design/: best-practices.md  general-tv-ui-philosophy.md  ideal-channel-features.md  key-design-principles.md  masterui.md  remote-control-buttons.md
docs/docs/developer-program/dev-tools/: app-tracing.md  brightscript-doc.md  brightscript-profiler.md  brs-profiler-file-format.md  external-control-api.md  ide-support.md  rale-tutorial.md  resource-monitor.md  roku-remote-tool.md  rrm-data-collection-mode.md  rrm-file-format.md  tools-overview.md
docs/docs/developer-program/discovery/: continue-watching.md  implementing-deep-linking.md  instant-signup.md  overview.md
docs/docs/developer-program/getting-started/: channel-localization.md  content-feed.md  developer-setup.md  first-steps.md  hello-world.md  roku-dev-prog.md  samples.md
docs/docs/developer-program/libraries/: roku-analytics-component.md
docs/docs/developer-program/media-playback/: autoplay.md  bookmarking.md  closed-caption.md  fast-video-start.md  screensavers.md  (+2 more)
docs/docs/features/: channel-development-models.md  features-overview.md  security.md
docs/docs/references/: deprecated-apis.md  references-overview.md
docs/docs/specs/: graphics.md  hardware.md  specs-overview.md
docs/trc-docs/: faqs.md
docs/trc-docs/live-linear/: getting-started.md  ovp-linear-ingest-spec.md
roku_docs/: results.json
roku_docs/docs/developer-program/: third-party-devs.md
roku_docs/docs/features/: how-channels-work.md
roku_docs/docs/references/: deprecated-apis.md
roku_docs/docs/specs/: hardware.md
roku_docs/trc-docs/: overview.md
roku_docs/trc-docs/live-linear/: epg-on-trc.md  getting-started.md  ovp-linear-ingest-spec.md
scraper/: WebScraper.py  __init__.py  scraper.py
(+635 files in other folders)
