[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "brightscript-docs-scraper"
version = "1.0.0"
description = "Scrapes Roku/BrightScript documentation to markdown files"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Robson Harrison"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
keywords = ["roku", "brightscript", "documentation", "scraper", "markdown"]
dependencies = [
    "crawl4ai>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/RobsonHarrison/brightScriptDocsScraper"
Repository = "https://github.com/RobsonHarrison/brightScriptDocsScraper"
Documentation = "https://context7.com/robsonharrison/brightscriptdocsscraper"

[project.scripts]
roku-docs-scraper = "scraper.scraper:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["scraper*"]

# =============================================================================
# Ruff - Fast Python Linter & Formatter
# =============================================================================

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["scraper"]

# =============================================================================
# MyPy - Static Type Checking
# =============================================================================

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true

[[tool.mypy.overrides]]
module = ["crawl4ai.*"]
ignore_missing_imports = true

# =============================================================================
# Pytest
# =============================================================================

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

